--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "chokidar-cli": "^3.0.0",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18"
@@ -22,6 +23,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
+    "nodemon": "^3.1.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.4",
     "typescript": "^5"
