--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,9 +17,14 @@
       {
         "name": "next"
       }
-    ],
+    ],  
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@pages/*": ["./src/pages/*"],
+      "@components/*": ["./src/components/*"],
+      "@ui/*": ["./src/ui/*"],
+      "@forms/*": ["./src/forms/*"],
+      "@app/*": ["./src/app/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
