--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@fullcalendar/daygrid": "^6.1.14",
     "@fullcalendar/react": "^6.1.14",
     "@fullcalendar/timegrid": "^6.1.14",
+    "@supabase/ssr": "^0.3.0",
+    "@supabase/supabase-js": "^2.43.5",
     "chokidar-cli": "^3.0.0",
     "next": "14.2.4",
     "react": "^18",
