ユーザーシフト登録フォーム完成

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,6 +31,6 @@
       "@types/*": ["./src/types/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/page.jsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/page.tsx", "src/app/user/shift/page.jsx"],
   "exclude": ["node_modules"]
 }
