管理者選択画面完成

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -58,7 +58,11 @@
       ],
       "@customTypes/*": [
         "./src/customTypes/*"
-      ]
+      ],
+      "@styles/*": [
+        "./src/styles/*"
+      ],
+
     },
 
   },
