--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@supabase/ssr": "^0.3.0",
     "@supabase/supabase-js": "^2.43.5",
     "chokidar-cli": "^3.0.0",
+    "date-fns": "^3.6.0",
     "js-cookie": "^3.0.5",
     "next": "14.2.4",
     "react": "^18",
