--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "js-cookie": "^3.0.5",
     "next": "14.2.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
