--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@supabase/supabase-js": "^2.43.5",
     "chokidar-cli": "^3.0.0",
     "date-fns": "^3.6.0",
+    "exceljs": "^4.4.0",
     "js-cookie": "^3.0.5",
     "next": "14.2.4",
     "react": "^18",
