--- a/package.json
+++ b/package.json
@@ -20,14 +20,15 @@
     "@fullcalendar/timegrid": "^6.1.14",
     "@supabase/ssr": "^0.3.0",
     "@supabase/supabase-js": "^2.43.5",
+    "@types/file-saver": "^2.0.7",
     "chokidar-cli": "^3.0.0",
     "date-fns": "^3.6.0",
     "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
     "js-cookie": "^3.0.5",
     "next": "14.2.4",
     "react": "^18",
-    "react-dom": "^18",
-    "xlsx": "^0.18.5"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
