ソースマップ追加

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -66,16 +66,19 @@
         "./src/common/*"
       ],
 
+
     },
+    "sourceMap": true,
+    "outDir": "./dist",
 
   },
   "include": [
+    "src/**/*",
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
     "src/app/page.tsx",
-    "src/app/user/shift/page.jsx"
   ],
   "exclude": [
     "node_modules"
