--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,13 +1,67 @@
+
+// {
+//   "version": "0.2.0",
+//   "configurations": [
+//     {
+//       "name": "Next.js: debug server-side",
+//       "type": "node-terminal",
+//       "request": "launch",
+//       "command": "npm run dev"
+//     },
+//     {
+//       "name": "Next.js: debug client-side",
+//       "type": "chrome",
+//       "request": "launch",
+//       "url": "http://localhost:3000"
+//     },
+//     {
+//       "name": "Next.js: debug full stack",
+//       "type": "node-terminal",
+//       "request": "launch",
+//       "command": "npm run dev",
+//       "serverReadyAction": {
+//         "pattern": "- Local:.+(https?://.+)",
+//         "uriFormat": "%s",
+//         "action": "debugWithChrome"
+//       }
+//     }
+//   ]
+// }
+
+
+
+
+
+// {
+//   "version": "0.2.0",
+//   "configurations": [
+//     {
+//       "type": "node",
+//       "request": "launch",
+//       "name": "Next.js: Full Stack",
+//       "runtimeExecutable": "npm",
+//       "runtimeArgs": ["run", "dev"],
+//       // "port": 9229,
+//       "skipFiles": ["<node_internals>/**"]
+//     }
+//   ]
+// }
+
+
+
+
+
+
 {
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Next.js: Full Stack Debug",
+      "name": "UGOKU Next.js: Full Stack Debug",
       "type": "node",
       "request": "launch",
       "program": "${workspaceFolder}/node_modules/next/dist/bin/next",
       "args": ["dev"],
-      "runtimeArgs": ["--inspect"],
+      "runtimeArgs": ["--inspect=9229"],
       "sourceMaps": true,
       "restart": true,
       "console": "integratedTerminal",
@@ -19,9 +73,68 @@
       "type": "chrome",
       "request": "launch",
       "url": "http://localhost:3000",
-      "webRoot": "${workspaceFolder}\\src",
+      "webRoot": "${workspaceFolder}/src",
       "sourceMaps": true,
       "trace": true
     }
   ]
 }
+
+
+
+
+
+
+
+
+
+
+// route ugoku
+// {
+//   "version": "0.2.0",
+//   "configurations": [
+//     {
+//       "name": "UGOKU Next.js: Full Stack Debug",
+//       "type": "node",
+//       "request": "launch",
+//       "program": "${workspaceFolder}/node_modules/next/dist/bin/next",
+//       "args": ["dev"],
+//       "runtimeArgs": ["--inspect"],
+//       "sourceMaps": true,
+//       "restart": true,
+//       "console": "integratedTerminal",
+//       "internalConsoleOptions": "neverOpen",
+//       "skipFiles": ["<node_internals>/**"]
+//     },
+//     {
+//       "name": "Launch Chrome against localhost",
+//       "type": "chrome",
+//       "request": "launch",
+//       "url": "http://localhost:3000",
+//       "webRoot": "${workspaceFolder}\\src\\*",
+//       "sourceMaps": true,
+//       "trace": true
+//     }
+//   ]
+// }
+
+
+
+
+
+// {
+//   "version": "0.2.0",
+//   "configurations": [
+//     {
+//       "name": "Next.js",
+//       "type": "node",
+//       "request": "launch",
+//       "runtimeExecutable": "npm",
+//       "runtimeArgs": ["run", "dev"],
+//       "port": 9229,
+//       "skipFiles": ["<node_internals>/**"],
+//       "outFiles": ["${workspaceFolder}/.next/**/*.js"]
+//     }
+//   ]
+// }
+
