--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
     "js-cookie": "^3.0.5",
-    "next": "14.2.4",
+    "next": "^14.2.5",
     "react": "^18",
     "react-dom": "^18"
   },
