--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,67 +1,13 @@
-
-// {
-//   "version": "0.2.0",
-//   "configurations": [
-//     {
-//       "name": "Next.js: debug server-side",
-//       "type": "node-terminal",
-//       "request": "launch",
-//       "command": "npm run dev"
-//     },
-//     {
-//       "name": "Next.js: debug client-side",
-//       "type": "chrome",
-//       "request": "launch",
-//       "url": "http://localhost:3000"
-//     },
-//     {
-//       "name": "Next.js: debug full stack",
-//       "type": "node-terminal",
-//       "request": "launch",
-//       "command": "npm run dev",
-//       "serverReadyAction": {
-//         "pattern": "- Local:.+(https?://.+)",
-//         "uriFormat": "%s",
-//         "action": "debugWithChrome"
-//       }
-//     }
-//   ]
-// }
-
-
-
-
-
-// {
-//   "version": "0.2.0",
-//   "configurations": [
-//     {
-//       "type": "node",
-//       "request": "launch",
-//       "name": "Next.js: Full Stack",
-//       "runtimeExecutable": "npm",
-//       "runtimeArgs": ["run", "dev"],
-//       // "port": 9229,
-//       "skipFiles": ["<node_internals>/**"]
-//     }
-//   ]
-// }
-
-
-
-
-
-
 {
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "UGOKU Next.js: Full Stack Debug",
+      "name": "ServerSide",
       "type": "node",
       "request": "launch",
       "program": "${workspaceFolder}/node_modules/next/dist/bin/next",
       "args": ["dev"],
-      "runtimeArgs": ["--inspect=9229"],
+      "runtimeArgs": ["--inspect"],
       "sourceMaps": true,
       "restart": true,
       "console": "integratedTerminal",
@@ -69,25 +15,19 @@
       "skipFiles": ["<node_internals>/**"]
     },
     {
-      "name": "Launch Chrome against localhost",
+      "name": "ClientSide",
       "type": "chrome",
       "request": "launch",
       "url": "http://localhost:3000",
       "webRoot": "${workspaceFolder}/src",
       "sourceMaps": true,
-      "trace": true
+      "trace": true,
+      "sourceMapPathOverrides": {
+        "webpack://_N_E/*": "${webRoot}/*"
+      }
     }
   ]
 }
-
-
-
-
-
-
-
-
-
 
 // route ugoku
 // {
@@ -118,23 +58,36 @@
 //   ]
 // }
 
-
-
-
-
+// next official
 // {
 //   "version": "0.2.0",
 //   "configurations": [
 //     {
-//       "name": "Next.js",
-//       "type": "node",
+//       "name": "Next.js: debug server-side",
+//       "type": "node-terminal",
 //       "request": "launch",
-//       "runtimeExecutable": "npm",
-//       "runtimeArgs": ["run", "dev"],
-//       "port": 9229,
-//       "skipFiles": ["<node_internals>/**"],
-//       "outFiles": ["${workspaceFolder}/.next/**/*.js"]
+//       "command": "npm run dev"
+//     },
+//     {
+//       "name": "Next.js: debug client-side",
+//       "type": "chrome",
+//       "request": "launch",
+//       "url": "http://localhost:3000"
+//     },
+//     {
+//       "name": "Next.js: debug full stack",
+//       "type": "node-terminal",
+//       "request": "launch",
+//       "command": "npm run dev",
+//       "serverReadyAction": {
+//         "pattern": "- Local:.+(https?://.+)",
+//         "uriFormat": "%s",
+//         "action": "debugWithChrome"
+//       },
+
+//       // 追加
+//       "cwd": "${workspaceFolder}/src",
+//       // "port": 9229
 //     }
 //   ]
 // }
-
