--- a/tsconfig.json
+++ b/tsconfig.json
@@ -68,17 +68,17 @@
 
 
     },
-    "sourceMap": true,
-    "outDir": "./dist",
+    // "sourceMap": true,
+    // "outDir": "./dist",
 
   },
   "include": [
-    "src/**/*",
+    // "src/**/*",
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "src/app/page.tsx",
+    // "src/app/page.tsx",
   ],
   "exclude": [
     "node_modules"
