--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,6 +1,12 @@
 
 {
   "version": "0.2.0",
+  "compounds": [
+    {
+      "name": "Full Stack Debug",
+      "configurations": ["ServerSide", "ClientSide"]
+    }
+  ],
   "configurations": [
     {
       "name": "ServerSide",
