--- a/tsconfig.json
+++ b/tsconfig.json
@@ -51,7 +51,7 @@
         "./src/app/*"
       ],
       "@api/*": [
-        "./src/api/*"
+        "./src/app/api/*"
       ],
       "@utils/*": [
         "./src/utils/*"
