--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fullcalendar/interaction": "^6.1.14",
     "@fullcalendar/react": "^6.1.14",
     "@fullcalendar/timegrid": "^6.1.14",
+    "@mui/material": "^6.1.2",
     "@supabase/ssr": "^0.3.0",
     "@supabase/supabase-js": "^2.43.5",
     "@types/file-saver": "^2.0.7",
