--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@fullcalendar/interaction": "^6.1.14",
     "@fullcalendar/react": "^6.1.14",
     "@fullcalendar/timegrid": "^6.1.14",
+    "@mui/icons-material": "^6.1.2",
     "@mui/material": "^6.1.2",
     "@supabase/ssr": "^0.3.0",
     "@supabase/supabase-js": "^2.43.5",
