--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "swr": "^2.2.5"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.13",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20.14.8",
     "@types/react": "^18.3.3",
@@ -43,9 +44,11 @@
     "cross-env": "^7.0.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.4",
+    "ts-jest": "^29.2.5",
     "typescript": "^5"
   }
 }
