--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "next build",
     "start": "next start",
     "start:watch": "nodemon --watch src --exec 'npm start'",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "@emotion/react": "^11.13.3",
@@ -45,6 +46,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "nodemon": "^3.1.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.4",
