--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,6 @@
 {
-    "crons": [
-      {
-        "path": "/api/auto-shift/run",
-        "schedule": "0 * * * *"
-      }
-    ]
-  }
-  
+  "crons": [{
+      "path": "/api/auto-shift/run",
+      "schedule": "0 1 * * *"
+    }]
+}
