--- a/vercel.json
+++ b/vercel.json
@@ -2,11 +2,7 @@
   "crons": [
     {
       "path": "/api/auto-shift/run",
-      "schedule": "0 11 * * *"
-    },
-    {
-      "path": "/api/auto-shift/run",
-      "schedule": "0 20 * * *"
+      "schedule": "0 1 20 * *"
     }
   ]
 }
