--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "next": "^14.2.14",
     "react": "^18",
     "react-dom": "^18",
-    "swr": "^2.2.5"
+    "swr": "^2.2.5",
+    "zustand": "^5.0.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.13",
