--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,7 +32,8 @@
       "@customTypes/*": ["./src/customTypes/*"],
       "@styles/*": ["./src/styles/*"],
       "@common/*": ["./src/common/*"],
-      "@stores/*": ["./src/stores/*"]
+      "@stores/*": ["./src/stores/*"],
+      "@actions/*": ["./src/app/actions/*"],
     }
   },
   "include": [
