デバッグ構成からhttpsでサーバー起動できるよう変更

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
       "type": "node",
       "request": "launch",
       "program": "${workspaceFolder}/node_modules/next/dist/bin/next",
-      "args": ["dev"],
+      "args": ["dev","--experimental-https"],
       "runtimeArgs": ["--inspect"],
       "sourceMaps": true,
       "restart": true,
@@ -24,7 +24,7 @@
       "name": "ClientSide",
       "type": "chrome",
       "request": "launch",
-      "url": "http://localhost:3000",
+      "url": "https://localhost:3000",
       "webRoot": "${workspaceFolder}/src",
       "sourceMaps": true,
       "trace": true,
