--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "next": "^14.2.14",
     "react": "^18",
     "react-dom": "^18",
+    "react-swipeable": "^7.0.1",
     "swr": "^2.2.5",
     "zustand": "^5.0.0"
   },
