--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "file-saver": "^2.0.5",
     "js-cookie": "^3.0.5",
     "next": "^14.2.14",
+    "next-auth": "^4.24.10",
     "react": "^18",
     "react-dom": "^18",
     "react-swipeable": "^7.0.1",
