customTypesをコメントアウト

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,7 @@
       "@app/*": ["./src/app/*"],
       "@api/*": ["./src/app/api/*"],
       "@utils/*": ["./src/utils/*"],
-      "@customTypes/*": ["./src/customTypes/*"],
+      // "@customTypes/*": ["./src/customTypes/*"],
       "@styles/*": ["./src/styles/*"],
       "@common/*": ["./src/common/*"],
       "@stores/*": ["./src/stores/*"],
