--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,12 +12,13 @@
       "type": "node",
       "request": "launch",
       "program": "${workspaceFolder}/node_modules/next/dist/bin/next",
-      "args": ["dev","--experimental-https"],
+      "args": ["dev", "--experimental-https"],
       "runtimeArgs": ["--inspect"],
       "sourceMaps": true,
       "restart": true,
       "console": "integratedTerminal",
       "internalConsoleOptions": "neverOpen",
+      "cwd": "${workspaceFolder}",
       "skipFiles": ["<node_internals>/**"]
     },
     {
@@ -25,7 +26,7 @@
       "type": "chrome",
       "request": "launch",
       "url": "https://localhost:3000",
-      "webRoot": "${workspaceFolder}/src",
+      "webRoot": "${workspaceFolder}",
       "sourceMaps": true,
       "trace": true,
       "sourceMapPathOverrides": {
